Fix forward, lateral ramp titles

--- a/web/tuning/forward-ramp.html
+++ b/web/tuning/forward-ramp.html
@@ -44,7 +44,7 @@ window.addEventListener("DOMContentLoaded", function() {
   <body>
     <div class="content">
       <header>
-        <h1>RR Lateral Ramp Regression</h1>
+        <h1>RR Forward Ramp Regression</h1>
         <details></details>
 
         <div id="download"></div>
