--- a/web/tuning/lateral-ramp.html
+++ b/web/tuning/lateral-ramp.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>RR Forward Ramp Regression</title>
+    <title>RR Lateral Ramp Regression</title>
 
     <style>
 body {
