--- a/web/tuning/dead-wheel-angular-ramp.html
+++ b/web/tuning/dead-wheel-angular-ramp.html
@@ -1,79 +1,84 @@
 <!doctype html>
 <html>
-  <head>
-    <title>RR Dead Wheel Angular Ramp Regression</title>
 
-    <style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
+<head>
+  <title>RR Dead Wheel Angular Ramp Regression</title>
 
-.content {
-  margin: auto;
-}
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
-header {
-  max-width: 600px;
-  margin: auto;
-}
+    .content {
+      margin: auto;
+    }
 
-.bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+    header {
+      max-width: 600px;
+      margin: auto;
+    }
 
-fieldset {
-  display: flex;
-  justify-content: space-between;
-}
+    .bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-h1 {
-  margin-bottom: 0;
-}
+    fieldset {
+      display: flex;
+      justify-content: space-between;
+    }
 
-details, a {
-  display: block;
-  margin: 1rem 0 1rem 0;
-}
-    </style>
+    h1 {
+      margin-bottom: 0;
+    }
 
-    <script type="module">
-import { loadDeadWheelAngularRampRegression, installButtonHandlers } from './common.ts';
+    details,
+    a {
+      display: block;
+      margin: 1rem 0 1rem 0;
+    }
+  </style>
 
-window.addEventListener("DOMContentLoaded", function() {
-  installButtonHandlers("angular-ramp", loadDeadWheelAngularRampRegression);
-});
-    </script>
-  </head>
-  <body>
-    <div class="content">
-      <header>
-        <h1>RR Dead Wheel Angular Ramp Regression</h1>
-        <details></details>
+  <script type="module">
+    import { loadDeadWheelAngularRampRegression, installButtonHandlers } from './common.ts';
 
-        <div id="download"></div>
+    window.addEventListener("DOMContentLoaded", function () {
+      installButtonHandlers("angular-ramp", loadDeadWheelAngularRampRegression);
+    });
+  </script>
+</head>
 
-        <fieldset>
-          <legend>Feedforward Parameters</legend>
-          <div>
-            kV: <input id="kv" type="text" />
-          </div>
-          <div>
-            kS: <input id="ks" type="text" />
-          </div>
-          <input id="update" type="button" value="update" />
-        </fieldset>
+<body>
+  <div class="content">
+    <header>
+      <h1>RR Dead Wheel Angular Ramp Regression</h1>
+      <p>Version: %VITE_APP_VERSION%</p>
+      <details></details>
 
-        <p>
-          <button id="latest">Latest</button>
-          <input id="browse" type="file" accept="application/json">
-        </p>
-      </header>
+      <div id="download"></div>
 
-      <div id="trackWidthChart"></div>
-    
-      <div id="deadWheelCharts"></div>
-    </div>
-  </body>
+      <fieldset>
+        <legend>Feedforward Parameters</legend>
+        <div>
+          kV: <input id="kv" type="text" />
+        </div>
+        <div>
+          kS: <input id="ks" type="text" />
+        </div>
+        <input id="update" type="button" value="update" />
+      </fieldset>
+
+      <p>
+        <button id="latest">Latest</button>
+        <input id="browse" type="file" accept="application/json">
+      </p>
+    </header>
+
+    <div id="trackWidthChart"></div>
+
+    <div id="deadWheelCharts"></div>
+  </div>
+</body>
+
 </html>
