--- a/web/tuning/forward-ramp.html
+++ b/web/tuning/forward-ramp.html
@@ -1,64 +1,69 @@
 <!doctype html>
 <html>
-  <head>
-    <title>RR Forward Ramp Regression</title>
 
-    <style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
+<head>
+  <title>RR Forward Ramp Regression</title>
 
-.content {
-  margin: auto;
-}
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
-header {
-  max-width: 600px;
-  margin: auto;
-}
+    .content {
+      margin: auto;
+    }
 
-.bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+    header {
+      max-width: 600px;
+      margin: auto;
+    }
 
-h1 {
-  margin-bottom: 0;
-}
+    .bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-details, a {
-  display: block;
-  margin: 1rem 0 1rem 0;
-}
-    </style>
+    h1 {
+      margin-bottom: 0;
+    }
 
-    <script type="module">
-import {loadForwardRampRegression, installButtonHandlers} from './common.ts';
+    details,
+    a {
+      display: block;
+      margin: 1rem 0 1rem 0;
+    }
+  </style>
 
-window.addEventListener("DOMContentLoaded", function() {
-  installButtonHandlers("forward-ramp", loadForwardRampRegression);
-});
-    </script>
-  </head>
-  <body>
-    <div class="content">
-      <header>
-        <h1>RR Forward Ramp Regression</h1>
-        <details></details>
+  <script type="module">
+    import { loadForwardRampRegression, installButtonHandlers } from './common.ts';
 
-        <div id="download"></div>
+    window.addEventListener("DOMContentLoaded", function () {
+      installButtonHandlers("forward-ramp", loadForwardRampRegression);
+    });
+  </script>
+</head>
 
-        <p>
-          <button id="latest">Latest</button>
-          <input id="browse" type="file" accept="application/json">
-        </p>
-      </header>
+<body>
+  <div class="content">
+    <header>
+      <h1>RR Forward Ramp Regression</h1>
+      <p>Version: %VITE_APP_VERSION%</p>
+      <details></details>
 
-      <div id="rampChart"></div>
-    </div>
+      <div id="download"></div>
 
-    <script>
-    </script>
-  </body>
+      <p>
+        <button id="latest">Latest</button>
+        <input id="browse" type="file" accept="application/json">
+      </p>
+    </header>
+
+    <div id="rampChart"></div>
+  </div>
+
+  <script>
+  </script>
+</body>
+
 </html>
