Move css into shared file

--- a/web/tuning/lateral-ramp.html
+++ b/web/tuning/lateral-ramp.html
@@ -4,41 +4,7 @@
 <head>
   <title>RR Lateral Ramp Regression</title>
 
-  <style>
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-    }
-
-    .content {
-      margin: auto;
-    }
-
-    header {
-      max-width: 600px;
-      margin: auto;
-    }
-
-    .bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    h1 {
-      margin-bottom: 0;
-    }
-
-    details,
-    a {
-      display: block;
-      margin: 1rem 0 1rem 0;
-    }
-
-    fieldset {
-      display: flex;
-      justify-content: space-between;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 
   <script type="module">
     import { loadLateralRampRegression, installButtonHandlers } from './common.ts';
