--- a/web/tuning/forward-ramp.html
+++ b/web/tuning/forward-ramp.html
@@ -21,6 +21,8 @@
       <h1>RR Forward Ramp Regression</h1>
       <p>Version: %VITE_APP_VERSION%</p>
 
+      <div id="error"></div>
+
       <div id="download"></div>
 
       <p>
