--- a/web/tuning/dead-wheel-angular-ramp.html
+++ b/web/tuning/dead-wheel-angular-ramp.html
@@ -24,6 +24,7 @@
       <div id="error"></div>
 
       <div id="download"></div>
+      <div id="warning"></div>
 
       <fieldset>
         <legend>Feedforward Parameters</legend>
