--- a/web/tuning/forward-ramp.html
+++ b/web/tuning/forward-ramp.html
@@ -22,6 +22,7 @@
       <p>Version: %VITE_APP_VERSION%</p>
 
       <div id="error"></div>
+      <div id="warning"></div>
 
       <div id="download"></div>
 
